web/js/promise/Formatter error
SyntaxError: Unexpected closing tag "head". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (1:1)
> 1 | </head>
    | ^^^^^^^
  2 | <body>
  3 |  <button>Click!</button>   
  4 |  <script>
